# AnalyticSystem

./: README.md  pyproject.toml
config/: settings.py
